#
# Copyright (C) 2019 SWC-DB (author: Kashirin Alex (kashirin.alex@gmail.com))
#

add_subdirectory(core)          #ifndef swc_core_path_FileName_h


add_subdirectory(fs)            #ifndef swc_fs_FileName_h

add_subdirectory(db)            #ifndef swc_db_FileName_h


add_subdirectory(client)        #ifndef swc_client_FileName_h


add_subdirectory(ranger)        #ifndef swc_ranger_FileName_h

#add_subdirectory(manager)      #ifndef swc_manager_FileName_h

add_subdirectory(fsbroker)      #ifndef swc_fsbroker_FileName_h

#add_subdirectory(thrift)       #ifndef swc_thrift_FileName_h



add_subdirectory(utils)      #ifndef swc_fsbroker_FileName_h

